infra/rmq/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: rmq-learn
spec:
  serviceName: rabbitmq
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      nodeSelector:
        kubernetes.io/hostname: asp-node-01 
      containers:
      - name: rabbitmq
        image: rabbitmq:3.13.7-management
        ports:
        - name: amqp
          containerPort: 5672
        - name: management
          containerPort: 15672
        resources:
            requests:
              memory: "2Gi"
              cpu: "600m"
            limits:
              memory: "4Gi"
        livenessProbe:
          tcpSocket:
            port: amqp
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: amqp
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
        - name: rabbitmq-data
          mountPath: /var/lib/rabbitmq
      volumes:
      - name: rabbitmq-data
        persistentVolumeClaim:
          claimName: rmq-learn-pvc
