infra/rmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmq-svc
  namespace: rmq-learn
  labels:
    app: rabbitmq
    environment: learn
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
      name: amqp
    - protocol: TCP
      port: 15672
      targetPort: 15672
      name: management
